@@ -1,11 +1,11 @@
 require 'timeout'
 require 'forwardable'
 require 'spec/dsl/pending'
-require 'spec/dsl/behaviour'
-require 'spec/dsl/behaviour_description'
-require 'spec/dsl/shared_behaviour'
-require 'spec/dsl/example_group_methods'
+require 'spec/dsl/example_group_class_methods'
+require 'spec/dsl/example_group_instance_methods'
 require 'spec/dsl/example_group'
+require 'spec/dsl/behaviour_description'
+require 'spec/dsl/shared_example_group'
 require 'spec/dsl/behaviour_factory'
 require 'spec/dsl/errors'
 require 'spec/dsl/configuration'
