@@ -4,10 +4,10 @@ module Spec
       remove_method :default_test if respond_to?(:default_test)
 
       class << self
-        include Behaviour
+        include ExampleGroupClassMethods
       end
 
-      include ExampleGroupMethods
+      include ExampleGroupInstanceMethods
     end
   end
 end
