@@ -1,23 +1,23 @@
 module Spec
   module Extensions
     module Main
-      # Creates and returns a class that includes the Behaviour module.
-      # The behaviour class depends on the directory of the file
+      # Creates and returns a class that includes the ExampleGroupClassMethods
+      # module. The ExampleGroup sub-class depends on the directory of the file
       # calling this method. For example, Spec::Rails will use different
-      # classes for specs living in <tt>spec/models</tt>, <tt>spec/helpers</tt>, 
-      # <tt>spec/views</tt> and <tt>spec/controllers</tt>.
+      # classes for specs living in <tt>spec/models</tt>,
+      # <tt>spec/helpers</tt>, <tt>spec/views</tt> and
+      # <tt>spec/controllers</tt>.
       #
-      # It is also possible to override autodiscovery of the behaviour class 
+      # It is also possible to override autodiscovery of the behaviour class
       # with an options Hash as the last argument:
       #
       #   describe "name", :behaviour_type => :something_special do ...
       #
-      # The reason for using different behaviour classes is to have
-      # different matcher methods available from within the <tt>describe</tt>
-      # block.
+      # The reason for using different behaviour classes is to have different
+      # matcher methods available from within the <tt>describe</tt> block.
       #
-      # See Spec::DSL::ExampleFactory#register for details about
-      # how to register special implementations.
+      # See Spec::DSL::ExampleFactory#register for details about how to
+      # register special implementations.
       #
       def describe(*args, &block)
         raise ArgumentError if args.empty?
