@@ -23,8 +23,8 @@ module Spec
       end
 
       def make_shared_behaviour(name, opts=nil, &block)
-        behaviour = SharedBehaviour.new(name, :shared => true, &block)
-        SharedBehaviour.add_shared_behaviour(behaviour)
+        behaviour = SharedExampleGroup.new(name, :shared => true, &block)
+        SharedExampleGroup.add_shared_behaviour(behaviour)
         behaviour
       end
 
@@ -44,18 +44,18 @@ module Spec
         b1.should_not be(nil)
         b2.should_not be(nil)
 
-        SharedBehaviour.find_shared_behaviour("b1").should equal(b1)
-        SharedBehaviour.find_shared_behaviour("b2").should equal(b2)
+        SharedExampleGroup.find_shared_behaviour("b1").should equal(b1)
+        SharedExampleGroup.find_shared_behaviour("b2").should equal(b2)
       end
 
       it "should register as shared behaviour" do
         behaviour = make_shared_behaviour("behaviour") {}
-        SharedBehaviour.shared_behaviours.should include(behaviour)
+        SharedExampleGroup.shared_behaviours.should include(behaviour)
       end
 
       it "should not be shared when not configured as shared" do
         behaviour = non_shared_behaviour
-        SharedBehaviour.shared_behaviours.should_not include(behaviour)
+        SharedExampleGroup.shared_behaviours.should_not include(behaviour)
       end
 
       it "should raise if run when shared" do
@@ -83,8 +83,8 @@ module Spec
 
       it "should NOT complain when adding the same shared behaviour instance again" do
         shared_behaviour = Class.new(ExampleGroup).describe("shared behaviour", :shared => true)
-        SharedBehaviour.add_shared_behaviour(shared_behaviour)
-        SharedBehaviour.add_shared_behaviour(shared_behaviour)
+        SharedExampleGroup.add_shared_behaviour(shared_behaviour)
+        SharedExampleGroup.add_shared_behaviour(shared_behaviour)
       end
 
       it "should NOT complain when adding the same shared behaviour again (i.e. file gets reloaded)" do
@@ -103,8 +103,8 @@ module Spec
         shared_behaviour_1.description[:spec_path] = "/my/spec/a/../shared.rb"
         shared_behaviour_2.description[:spec_path] = "/my/spec/b/../shared.rb"
 
-        SharedBehaviour.add_shared_behaviour(shared_behaviour_1)
-        SharedBehaviour.add_shared_behaviour(shared_behaviour_2)
+        SharedExampleGroup.add_shared_behaviour(shared_behaviour_1)
+        SharedExampleGroup.add_shared_behaviour(shared_behaviour_2)
       end
 
       it "should complain when adding a different shared behaviour with the same name in a different file with the same basename" do
@@ -114,9 +114,9 @@ module Spec
         shared_behaviour_1.description[:spec_path] = "/my/spec/a/shared.rb"
         shared_behaviour_2.description[:spec_path] = "/my/spec/b/shared.rb"
 
-        SharedBehaviour.add_shared_behaviour(shared_behaviour_1)
+        SharedExampleGroup.add_shared_behaviour(shared_behaviour_1)
         lambda do
-          SharedBehaviour.add_shared_behaviour(shared_behaviour_2)
+          SharedExampleGroup.add_shared_behaviour(shared_behaviour_2)
         end.should raise_error(ArgumentError, /already exists/)
       end
 
